# qtr

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  rebuild.sh
docker/: Dockerfile  Dockerfile.build  build.sh
include/nonstd/: decimal.h
include/qtr/io/: csv_file_source.h  parquet_file_sink.h  parquet_file_source.h  stream_reader_ex.h  stream_writer_ex.h
include/qtr/parquet/: parquet_primitive_row.h  parquet_types.h
include/qtr/schema/: parquet_json_schema.h
include/qtr/utils/: arrow_fs_utils.h  arrow_schema_utils.h  csv_utils.h  parquet_schema_utils.h  parquet_stream_utils.h  string_utils.h
programs/: CMakeLists.txt
programs/qtr-csv2parquet/: CMakeLists.txt  qtr-csv2parquet.cpp
programs/qtr-parquet-schema-gen-cpp/: CMakeLists.txt  generator.cpp  generator.h  qtr-parquet-schema-gen-cpp.cpp  type_conv.cpp  type_conv.h
programs/qtr-parquet2parquet/: CMakeLists.txt  qtr-parquet2parquet.cpp
src/qtr/: CMakeLists.txt
src/qtr/io/: csv_file_source.cpp
src/qtr/parquet/: parquet_primitive_row.cpp  parquet_types.cpp
src/qtr/schema/: parquet_json_schema.cpp
src/qtr/utils/: arrow_fs_utils.cpp  arrow_schema_utils.cpp  csv_utils.cpp  parquet_schema_utils.cpp  parquet_stream_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  readme.md  test_decimal.cpp  test_parquet.cpp
tests/code-gen-test/: CMakeLists.txt  main.cpp  run_test.sh  schema_test_all.cpp  schema_test_all.h  test1_v1.cpp  test1_v1.h
tests/test_data/: schema_test_all.parquet-schema.json  test1_v1.parquet-schema.json
